# OSAI

./: .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  AGENTIC_AUTOMATIONS_PLAN.md  AUDIT_REPORT.md  CONTRIBUTING.md  MADVERSE_PILOT_READINESS.md  OSAI_BUILD_ROADMAP.md  OSAI_EXECUTION_PLAN.md  OSAI_MVP_BUILD_PLAN.md  OSAI_MVP_Build_Brief.docx  OSAI_PARALLEL_PLAN.md  PRE_DEMO_SETUP.md  PRODUCTION_READINESS_ACTION_PLAN.md  PROMPTQL_GAP_PLAN.md  README.md  docker-compose.yml  osai.html  pr-test-file.md  render.yaml  test-file.md  test-file2.md  test-file3.md
osai-backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  config.py  policy.py  pyproject.toml
osai-backend/agent/: __init__.py  automation_runner.py  context.py  delivery.py  hermes_client.py  orchestrator.py  tools.py
osai-backend/api/: document_extraction.py  main.py  ratelimit.py
osai-backend/connectors/: base.py  composio_agent.py  composio_ingest.py  composio_live.py  composio_tool.py  freshdesk.py  google_drive.py  notion.py  registry.py  slack.py  stubs.py  sync_service.py  toolkit_map.py
osai-backend/db/: api_keys.py  approval_policy.py  models.py  repositories.py  seed.py  session.py  sql_secrets.py
osai-backend/evals/: __init__.py  fixtures.py  hermes_export.py  runner.py
osai-backend/graph/: __init__.py  gbrain_provider.py  provider.py
osai-backend/llm/: gemini.py  ollama.py  policy.py  router.py
osai-backend/memory/: chunker.py  embeddings.py  gbrain_client.py  org_memory.py  qdrant_store.py  retriever.py  supermemory_client.py
osai-backend/tests/: conftest.py  test_action_confirmation_fail_closed.py  test_action_dismissal.py  test_agent.py  test_agentic_automations.py  test_ai_execution_boundaries.py  test_answer_feedback.py  test_approval_policy.py  test_approver_binding.py  test_artifacts.py  test_ask_memory.py  test_ask_modes.py  test_auth_isolation.py  test_auth_session_introspection.py  test_automation_delivery.py  test_automation_scheduler.py  test_automation_trigger.py  test_automation_trigger_idempotency.py  (+85 more)
(+282 files in other folders)
