[project]
name = "osai-backend"
version = "0.1.0"
description = "Connector-first backend for the OSAI MVP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "celery>=5.5.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.3.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "qdrant-client>=1.14.0",
    "redis>=6.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
