[project]
name = "osai-backend"
version = "0.1.0"
description = "Connector-first backend for the OSAI MVP."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "cryptography>=49.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.3.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "PyJWT>=2.9.0",
    "qdrant-client>=1.14.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
    "google-genai>=1.0.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.32",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "sentry-sdk>=2.66.0",
    "tenacity>=9.1.4",
    # Security floor: 0.6.4 fixes CVE-2026-59885 and CVE-2026-59886.
    "pyasn1>=0.6.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"db/migrations/versions/*.py" = ["E501"]
"workflows/prompts/*.py" = ["E501"]
